fixed footer spacing and adjusted the social media icon size

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -141,7 +141,7 @@ p {
 
 .footer {
   padding: 100px;
-  background: rgb(238, 85, 85);
+  background: rgb(243, 76, 76);
   color: white;
 }
 
@@ -157,25 +157,29 @@ p {
 }
 
 .smlinks p {
-  margin-top: 20px !important;
+  margin-top: 40px !important;
 }
 
 .smlinks a {
-  font-size: 30px;
+  font-size: 25px;
   color: white;
   text-decoration: none;
 }
 
 .circle {
-  background: #ffc0c0;
-  width: 100px;
+  background: #e6e2e2da;
+  width: 75px;
   border-radius: 50%;
   text-align: center;
   vertical-align: middle;
-  padding: 30px;
+  padding: 20px;
 }
 
 .smlinks a:hover {
   color: rgba(1, 4, 49, 0.795);
   text-decoration: none;
+}
+
+.smlinks i {
+  margin-right: 15px;
 }
